--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 :root {
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 }
@@ -7,6 +6,6 @@
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #fff;
   }
 }
